src/test/ui/rfc-2093-infer-outlives/self-structs.stderr
error: rustc_outlives
  --> $DIR/self-structs.rs:14:1
   |
LL | / struct Foo<'a, 'b, T> { //~ ERROR 14:1: 16:2: rustc_outlives
LL | |     field1: Bar<'a, 'b, T>
LL | | }
   | |_^
   |
   = note: T : 'a

error: aborting due to previous error

